[tool.poetry]
name = "catalog-microservice"
version = "0.1.0"
description = "Microservice witch will make work with catalog"
authors = ["ivankorolev <Ivankorol1512@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.14"
asyncio = "^4.0.0"
pydantic-settings = "^2.12.0"
pydantic = "^2.12.5"
pymongo = "^4.16.0"
motor = "^3.7.1"
python-dotenv = "^1.2.1"
grpcio = "^1.78.0"
grpcio-tools = "^1.78.0"
protobuf = "^6.33.5"
pytest = "^9.0.2"



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
